<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" android:padding="10dp"
        android:orientation="horizontal" android:background="@color/backgroundcolor">
    <android.support.v7.widget.CardView
            android:id="@+id/list_phase_item"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:background="@drawable/border"
            android:layout_width="340dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
        <LinearLayout
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
            <TextView
                    android:id="@+id/phase_number"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:text="@string/phase_number"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:padding="10dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView android:id="@+id/phase_start_date" android:layout_width="120dp"
                          android:layout_height="wrap_content" android:text="@string/phase_begin"
                          android:textAlignment="center"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phase_to"
                          android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
                <TextView android:id="@+id/phase_end_date" android:layout_width="120dp"
                          android:layout_height="wrap_content" android:text="@string/phase_end"
                          android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
