<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:orientation="horizontal">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
    >
        <android.support.v7.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="12dp"
                android:id="@+id/view2"
                app:cardCornerRadius="40dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9">
            <ImageView
                    android:id="@+id/list_reply_image"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:contentDescription="@string/image"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="210dp"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/list_reply_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_name"/>
            <TextView
                    android:id="@+id/list_reply_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_value"/>
            <TextView
                    android:id="@+id/list_reply_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_date"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageButton
                    android:id="@+id/report_reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_report" android:background="@drawable/circle" android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>