<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".fragments.profile.ProfileAccountFragment">
    <LinearLayout  android:layout_marginTop="110dp" android:id="@+id/lin1" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:layout_width="match_parent" android:layout_marginStart="10dp" android:textSize="30sp" android:layout_height="wrap_content" android:textAlignment="center" android:text="@string/sec_title"/>
        <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp">
            <ImageView
                    android:id="@+id/imgView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

            <EditText
                    android:id="@+id/sec_old_password"
                    android:layout_width="308dp"
                    android:layout_height="47dp"
                    android:layout_alignBottom="@+id/imgView_userIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imgView_userIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/sec_password_current"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textSize="15sp"/>
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp">
            <ImageView
                    android:id="@+id/imgView_newpassIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

            <EditText
                    android:id="@+id/sec_new_password"
                    android:layout_width="308dp"
                    android:layout_height="47dp"
                    android:layout_alignBottom="@+id/imgView_newpassIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imgView_newpassIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/sec_password_new"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textSize="15sp"/>
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp">
            <ImageView
                    android:id="@+id/imgView_newpassconfIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

            <EditText
                    android:id="@+id/sec_new_password_confirm"
                    android:layout_width="308dp"
                    android:layout_height="47dp"
                    android:layout_alignBottom="@+id/imgView_newpassconfIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imgView_newpassconfIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/sec_password_confirm"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textSize="15sp"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="98dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sec_save"
            android:textColor="@color/white" />
</RelativeLayout>