<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundcolor"
        tools:context=".activities.project.phase.IdeaActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@color/backgroundcolor">

        <!--Top toolbar-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout1"
        >
            <include layout="@layout/layout_top_tabs" android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>

        </RelativeLayout>

        <!--Middle section-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout2"
                android:layout_below="@+id/relLayout1"
                android:layout_above="@+id/bottom_id"
        >
            <TextView
                    android:text="@string/idea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:id="@+id/textView2"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/idea"
                    android:background="@null"
                    android:ems="10"
                    android:id="@+id/idea_title"
                    android:layout_below="@id/textView2"
                    android:layout_marginStart="32dp" android:layout_marginTop="16dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/idea_desc"
                    android:background="@null"
                    android:ems="10"
                    android:layout_below="@id/idea_title"
                    android:id="@+id/idea_description" android:layout_marginTop="20dp"
                    android:layout_marginStart="32dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/image"
                      android:id="@+id/textView"
                      android:textSize="20sp"
                      android:textStyle="bold"
                      android:layout_below="@id/idea_description"
                      android:layout_marginStart="32dp"
                      android:layout_marginTop="20dp"/>
            <Button
                    android:text="@string/image_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonshape"
                    android:id="@+id/idea_upload_image"
                    android:layout_below="@id/idea_image_upload"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"/>
            <Button
                    android:text="@string/idea_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonshape"
                    android:id="@+id/idea_post" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" android:layout_marginTop="184dp"
                    android:layout_below="@id/idea_image_upload"
            />
            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars[0]"
                    android:id="@+id/idea_image_upload"
                    android:background="@drawable/border"
                    android:layout_below="@id/textView"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"/>

        </RelativeLayout>
        <!--Bottom navigation-->
        <include layout="@layout/layout_bottom_navigation_view"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>